--- a/static/resource/css/order.css
+++ b/static/resource/css/order.css
@@ -335,6 +335,16 @@ div, header, section, nav, input, ul, li {
 	border-radius: 5em;
 }
 
+.order_save {
+    display: table;
+	margin: 1em auto 0;
+	padding: 1em 3.5em;
+	color: #fff;
+	font-size: 0.66em;
+	background-color: #f9c446;
+	border-radius: 5em;
+}
+
 .btn {
     margin:0 1em 0 0;
     font-size:0.75em;
