--- a/main/templates/class/class_view_arduino.html
+++ b/main/templates/class/class_view_arduino.html
@@ -160,8 +160,8 @@
                         </div>
                     </div>
                     <div class="btn_area">
-                        <a href="#" class="btn cart" onClick="javascript:goOrder();">장바구니</a>
-                        <a class="btn buy" href="/order/">바로구매</a>
+                        <a href="#" class="btn cart" onClick="javascript:goOrder(1);">장바구니</a>
+                        <a class="btn buy" href="#" onClick="javascript:goOrder(2);">바로구매</a>
                     </div>
                     <input type="hidden" name="message" value="{{message}}" readonly>
                 </div>
@@ -194,7 +194,7 @@
 
         <!-- templates로 옮기자 쿠키 session 확인을 위해서.-->
 
-        function goOrder()
+        function goOrder(flag)
         {
 
             if($("input[type=hidden][name=clientId]").val() == "")
@@ -204,7 +204,10 @@
             }
             else
             {
-                document.getElementById("prd_form").submit();
+                if(flag == 1)
+                    document.getElementById("prd_form").submit();
+                if(flag == 2)
+                    location.href = "/order/"
              }
          }
 
