장바구니 구현중

--- a/main/templates/class/class_view_arduino.html
+++ b/main/templates/class/class_view_arduino.html
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="btn_area">
-                        <a href="#" class="btn cart" onClick="javascript:goOrder(1);">장바구니</a>
+                        <a href="#" class="btn cart" onClick="javascript:goOrder(1);">장바구니 담기</a>
                         <a class="btn buy" href="#" onClick="javascript:goOrder(2);">바로구매</a>
                     </div>
                     <input type="hidden" name="message" value="{{message}}" readonly>
