--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -77,14 +77,19 @@
                     <li>
                         <a href="orderList.html">주문내역</a>
                     </li>
-                    <li>
-                        <div id="logout" >
+                     <div id="logout" >
+                        <li>
+                            <a href="/order/">장바구니</a>
+                        </li>
+                        <li>
                             <a href="/run_logout/">로그아웃</a>
-                        </div>
-                        <div id="login">
+                        </li>
+                     </div>
+                     <div id="login">
+                         <li>
                             <a href="/run_login/">로그인</a>
-                        </div>
-                    </li>
+                         </li>
+                     </div>
                 </ul>
             </div>
         </div>
