--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -1,7 +1,7 @@
 
 {% include "common/header.html" %}
 {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/order.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/order.css' %}">
     <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
 
 <!-- content -->
