reigister popup 삭제

--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -70,9 +70,9 @@
                     <li>
                         <a href="mypage.html">내 프로필</a>
                     </li>
-                    <li>
-                        <a href="coupon.html">내 쿠폰</a>
-                    </li>
+<!--                    <li>-->
+<!--                        <a href="coupon.html">내 쿠폰</a>-->
+<!--                    </li>-->
                     <li>
                         <a href="orderList.html">주문내역</a>
                     </li>
