--- a/main/templates/payment/pay_info.html
+++ b/main/templates/payment/pay_info.html
@@ -15,7 +15,7 @@
                 <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
             </div>
         </section>
-
+</div>
 <form id="result_form" method="post" action="/pay_result/" >
     {% csrf_token %}
     <input type="hidden" id="pay" name="pay" value={{payment.pay_idx}}>
@@ -48,48 +48,27 @@
     buyer_tel : phone,
     buyer_addr : buyer_addr,
     buyer_postcode : buyer_postcode,
-    m_redirect_url : 'http://locahost:8000'
-}, function(rsp) {
-       if ( rsp.success ) {
-    	//[1] 서버단에서 결제정보 조회를 위해 jQuery ajax로 imp_uid 전달하기
-    	jQuery.ajax({
-    		url: "/payments/complete", //cross-domain error가 발생하지 않도록 동일한 도메인으로 전송
-    		type: 'POST',
-    		dataType: 'json',
-    		data: {
-	    		imp_uid : rsp.imp_uid
-	    		//기타 필요한 데이터가 있으면 추가 전달
-    		}
-    	}).done(function(data) {
-    		//[2] 서버에서 REST API로 결제정보확인 및 서비스루틴이 정상적인 경우
-    		if ( everythings_fine ) {
-    			var msg = '결제가 완료되었습니다.';
-    			msg += '\n고유ID : ' + rsp.imp_uid;
-    			msg += '\n상점 거래ID : ' + rsp.merchant_uid;
-    			msg += '\결제 금액 : ' + rsp.paid_amount;
-    			msg += '카드 승인번호 : ' + rsp.apply_num;
-                $("input[type=hidden][name=pay_result]").val('0');
-                $("input[type=hidden][name=pay_msg]").val(msg);
-    			alert(msg);
-    		} else {
-    		     msg = "결제가 제대로 이뤄지지 않았습니다. \n 고객 센터에 문의 바랍니다."
-    		     $("input[type=hidden][name=pay_result]").val('1');
-    		     $("input[type=hidden][name=pay_msg]").val(msg);
-    		     alert(msg);
-    			//[3] 아직 제대로 결제가 되지 않았습니다.
-    			//[4] 결제된 금액이 요청한 금액과 달라 결제를 자동취소처리하였습니다.
-    		}
-    	});
-    } else {
-        var msg = '결제에 실패하였습니다.';
-        msg += '에러내용 : ' + rsp.error_msg;
-        $("input[type=hidden][name=pay_result]").val('1');
-        $("input[type=hidden][name=pay_msg]").val(msg);
-        alert(msg);
-    }
-    document.getElementById("result_form").submit();
-});
+    }, function(rsp) {
+        if ( rsp.success ) {
+            var msg = '결제가 완료되었습니다.';
+            msg += '고유ID : ' + rsp.imp_uid;
+            msg += '상점 거래ID : ' + rsp.merchant_uid;
+            msg += '결제 금액 : ' + rsp.paid_amount;
+            msg += '카드 승인번호 : ' + rsp.apply_num;
+            $("input[type=hidden][name=pay_result]").val('0');
 
+        } else {
+            var msg = '결제에 실패하였습니다.';
+            msg += '에러내용 : ' + rsp.error_msg;
+            $("input[type=hidden][name=pay_result]").val('1');
+        }
+
+        alert(msg);
+         $("input[type=hidden][name=pay_msg]").val(msg);
+         document.getElementById("result_form").submit();
+    });
 
 </script>
 
+</body>
+</html>
